--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
+  "ConnectionStrings": {
+    "SQLServerExpress": "Server=localhost\\SQLEXPRESS;Database=db1;Trusted_Connection=True;TrustServerCertificate=true;"
+  },
 "AllowedHosts": "*"
 }
